# avatar_2026

./: README.md
avatar_bringup/: package.xml
avatar_bringup/avatar_bringup/: joint_trajectory_executor.py
avatar_bringup/launch/: follower.launch.py  rviz_follower.launch.py
avatar_control/avatar_control/src/: bridge_node.py
avatar_description/ros2_control/: follower.ros2_control.xacro
avatar_description/urdf/follower/: follower.urdf.xacro  follower_arm.urdf.xacro
avatar_follower/avatar_follower/: follower_driver.py
avatar_leader/: setup.py
avatar_leader/avatar_leader/plugins/: calibration.py  safety.py  test_calibration.py
avatar_leader/avatar_leader/src/: bridge_node.py  test_node.py
avatar_vision/: setup.py
avatar_vision/avatar_vision/: rgb_sub.py
